--- a/index.html
+++ b/index.html
@@ -5,30 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project 02</title>
+    <style>
+      body {
+        border: 4px solid black;
+      }
+      .product-title {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 22px;
+        font-weight: bold;
+        background-color: #f7f7f7;
+      }
+      .button {
+        background-color: black;
+        color: white;
+        font-size: 25px;
+        text-transform: uppercase;
+      }
+      .shipping {
+        text-transform: uppercase;
+        color: #777;
+        font-size: 18px;
+        font-weight: bold;
+      }
+      .price {
+        font-weight: bold;
+        font-size: 24px;
+      }
+      .more-information:link,
+      .more-information:visited {
+        color: black;
+      }
+      .more-information:hover,
+      .more-information:active {
+        text-decoration: none;
+      }
+      .detail-list {
+        list-style-type: square;
+      }
+      .detail-title {
+        font-size: 22px;
+        text-transform: uppercase;
+      }
+      .button:hover {
+        color: #000;
+        background-color: #fff;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <article>
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img
         src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
         alt="text"
         width="250"
         height="250"
       />
-      <p><strong>$65.00</strong></p>
-      <p>Free shipping</p>
+      <p class="price"><strong>$65.00</strong></p>
+      <p class="shipping">Free shipping</p>
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple.
       </p>
-      <a href="">More information &rarr;</a>
-      <h3>Product details</h3>
-      <ul>
+      <a class="more-information" href="#">More information &rarr;</a>
+      <h3 class="detail-title">Product details</h3>
+      <ul class="detail-list">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
-      <button>Add to cart</button>
+      <button class="button">Add to cart</button>
     </article>
   </body>
 </html>
